# CPP-Raytracer

./: .gitignore  Makefile  README.md  bvh.fwd.h  hittable.h  hittable_list.h  main.cpp  moving_sphere.h  obj_loader.h  sphere.h  test.cpp  triangle_mesh.h
demos/: CMakeLists.txt  Makefile  build.sh  image.ppm  main  main.cpp
include/: aabb.h  bvh.h  camera.h  color.h  hittable.h  hittable_list.h  material.h  moving_sphere.h  obj_loader.h  ray.h  renderer.h  rtcore.h  rtweekend.h  sphere.h  transform.h  triangle.h  triangle_mesh.h  vec3.h
lib/: CMakeLists.txt  aabb.cpp  bvh.cpp  color.cpp  hittable_list.cpp  moving_sphere.cpp  obj_loader.cpp  renderer.cpp  sphere.cpp  triangle.cpp  triangle_mesh.cpp
src/: aabb.h  bvh.h  camera.h  color.h  hittable_list.fwd.h  material.h  rtcore.h  rtweekend.h  triangle.h
tests/: Makefile  out  test.cpp
